# BetaSimProject

./: CMakeLists.txt
Application/: CMakeLists.txt
Application/src/: main.cpp
BetaSimLib/: CMakeLists.txt
BetaSimLib/macroses/: init.mac
BetaSimLib/macroses/exp/: experiment.mac
BetaSimLib/src/: BetaSimRunner.cpp  BetaSimRunner.cppm
BetaSimLib/src/Actions/: RunAction.cppm
BetaSimLib/src/Concepts/Detectors/: DetectorConstructionConcept.cppm
BetaSimLib/src/Concepts/Generators/: GeneratorConcept.cppm
BetaSimLib/src/Detectors/: BaseDetectorConstruction.cppm  DetectorManager.cppm  DetectorWrapper.cppm  StartDetector.cppm
BetaSimLib/src/EventDispatcher/: EventDispatcher.cppm
BetaSimLib/src/Generators/: BaseGenerator.cppm  GeneratorManager.cppm  GeneratorWrapper.cppm  GunGenerator.cppm  RadioIsotopeGenerator.cppm
BetaSimLib/src/Layers/DetectorsLayer/: DetectorLayerBuilder.cppm
BetaSimLib/src/Materials/: ExtendedMaterial.cppm  ExtendedMaterialService.cppm  MaterialConstants.cppm
BetaSimLib/src/Messenger/: Messenger.cppm
BetaSimLib/src/Messenger/Commands/: CommandBuilder.cppm  CommandManager.cppm
BetaSimLib/src/Models/: ExperimentConfigModel.cppm
BetaSimLib/src/Runtime/: ExperimentState.cppm
BetaSimLib/src/SensitiveDetectors/: BaseSD.cppm
BetaSimLib/src/SensitiveDetectors/Scoring/: DetectorHit.cppm
BetaSimLib/src/Statistics/: SimulationStatisticsService.cppm
BetaSimLib/utils/: Event.cppm
